<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>hiros_skeleton_visualizer</name>
  <version>0.1.0</version>
  <description>Hi-ROS maintained skeleton_visualizer package</description>
  <maintainer email="mattia.guidolin@unipd.it">mguidolin @ Hi-ROS</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/hiros-unipd</url>
  <author email="mattia.guidolin@unipd.it">Mattia Guidolin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>hiros_skeleton_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
</package>
